<resources>
    <string name="app_name">Ежедневник</string>
    <string name="number">number</string>
    <string name="select_day">select day</string>
    <string name="title">Daily planner</string>
    <string name="text_for_beauty_add_new_thing">что-то типо редактирование записи</string>
    <string name="business">business</string>
    <string name="time">time</string>
    <string name="save">Save</string>
    <string name="split">—</string>
    <string name="time_start">time start</string>
    <string name="time_end">time end</string>
    <string name="delete_title_item">delete</string>
    <string name="change_title_item">change</string>
    <string name="date">date</string>
    <string name="important_business">Important business</string>
    <string name="set_an_alarm">set an alarm</string>
    <string name="Redact">Redact</string>
    <string name="Add">Add</string>
</resources>